2007-11-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-deduce-fileset): Also look for a fileset in the parent
	buffer if the parent buffer is in vc-dired-mode.

2007-11-23  Mark A. Hershberger  <mah@everybody.org>

	* nxml: Initial merge of nxml.  Kept nxml/char-name subdir for now.

2007-11-23  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-read-dir-and-switches): For C-x d, set the
	value for M-n to the visited file name of the current buffer.
	Use minibuffer-with-setup-hook to set minibuffer-default to
	buffer-file-name inside read-file-name.

	* man.el (Man-getpage-in-background): Don't disregard user option
	`Man-width' on non-window systems.  Remove test for `window-system'
	around setting envvar "COLUMNS" depending on the value of `Man-width'.

	* progmodes/grep.el (grep-process-setup): Set envvar "TERM" to
	"emacs-grep".  Set envvar "GREP_OPTIONS" to "--color=auto" instead
	of "--color=always".

2007-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (beginning-of-defun-raw): Pass `arg' down to
	beginning-of-defun-function.

2007-11-22  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail/hashcash.el: Move from ../gnus.  Add hashcash payments to email.

2007-11-22  Glenn Morris  <rgm@gnu.org>

	* emulation/cua-base.el (x-clipboard-yank): Fix declaration.

	* emacs-lisp/check-declare.el (check-declare-locate): New function.
	(check-declare-scan): Use check-declare-locate.
	(check-declare-verify): No longer adjust fnfile, now
	check-declare-locate does it.

	* emacs-lisp/byte-run.el (declare-function): Doc fix.

2007-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (posn-col-row): Make the `default-value' use explicit.

	* window.el (balance-windows): Remove unused var `counter'.
	(bw-balance-sub): Remove unused var `lastchild'.
	(split-window-vertically): Remove unused var `switch'.
	(recenter-top-bottom): Remove unused vars `bottom', `current', `total'.

	* emacs-lisp/bytecomp.el