@@ -1,8 +1,0 @@
-;; -*- no-byte-compile: t -*-
-;; In load-path, after this directory should come
-;; certain of its subdirectories.  Here we specify them.
-(normal-top-level-add-to-load-path '("char-name" ))
-;; Local Variables:
-;; version-control: never
-;; no-byte-compile: t
-;; End:
